k8s_autoscaling/templates/goserver_deploy.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: goserver
  namespace: default
  labels:
    name: goserver
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 80%
  template:
    metadata:
      labels:
        name: goserver

    spec:
      serviceAccountName: admin-user
      terminationGracePeriodSeconds: 180
      containers:
      - name: goserver
        image: new-svc
        imagePullPolicy: Never
        readinessProbe:
          httpGet:
            path:  /health
            port: 8080
          initialDelaySeconds: 1
          timeoutSeconds: 2
          periodSeconds: 3
          successThreshold: 2
          failureThreshold: 3
---
kind: Service
apiVersion: v1
metadata:
  name: goserver
spec:
  selector:
    name: goserver
  type: ClusterIP
  ports:
  - name: http-goserver
    protocol: TCP
    port: 80
    targetPort: 8080
