k8s_autoscaling/templates/policies.yml
kind: Namespace
apiVersion: v1
metadata: 
  name: test 
---
apiVersion: v1
kind: Pod
metadata:
  namespace: test
  name: test
  labels:
    name: test
spec:
  containers:
  - name: centos
    image: centos
    args:
    - sleep
    - "1000000"

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
  namespace: test
spec:
  podSelector:
    matchLabels:
      name: test
  policyTypes:
  - Egress
